--- a/src/main/resources/static/styles/signup.css
+++ b/src/main/resources/static/styles/signup.css
@@ -1,99 +1,11 @@
-/* body{
-    background-image: url("/img/login-img.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    backdrop-filter: blur(2px);
-} */
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 1; 
+h2{
+    color: #FFFFFF;
 }
 
-.card {
-    margin-top: 5%;
-    background-color: rgba(255, 255, 255, 0.2) !important; 
-    border-color: white !important;
-    height: auto;
+label{
+    color: #D1D5D7 !important;
 }
 
-.escolha-sexo{
-    background-color: #FFFFFF;
-    margin-top: 4%;
-    height: 80px;
-    padding-left: 5px;
-    border-radius: 5px;
+.alerta{
+    color: #D1D5D7 !important;
 }
-
-body {
-    background-image: url("/img/login-img.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    backdrop-filter: blur(2px);
-    background-repeat: repeat;
-}
-
-/* Responsividade para telas menores */
-@media (max-width: 768px) {
-    body {
-        background-repeat: repeat;
-    }
-
-    .card {
-        width: 100%;
-        padding: 20px;
-    }
-}
-
-/* #error-message{
-    border-radius: 10px !important;
-    padding: 5px;
-}
-
-
-
-a{
-    color: black !important;
-}
-
- */
-
-/* @media (max-width: 768px) {
-    body{
-        background-repeat: repeat;
-        backdrop-filter: blur(2px);
-    }
-
-    .error-message{
-        margin-top: 80% !important;
-    }
-    
-}
-
-@media(max-width: 547px){
-    .error-message{
-        margin-top: 100% !important;
-    }
-}
-
-@media(max-width: 453px){
-    .error-message{
-        margin-top: 110% !important;
-    }
-}
-
-@media(max-width: 408px){
-    .error-message{
-        margin-top: 120% !important;
-    }
-}
-
-@media(max-width: 379px){
-    .error-message{
-        margin-top: 133% !important;
-    }
-} */
