--- a/src/main/resources/templates/alterar-dados.html
+++ b/src/main/resources/templates/alterar-dados.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="bg-white border-gray-200 dark:bg-gray-900">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <a th:href="@{/}" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="/img/logo-aig.png" alt="Logo site" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Aeroporto Internacional do Guamá</span>
             </a>
@@ -49,15 +49,11 @@
         </nav>
     </header>
     
-    <hr style="color: gray;;">
+    <hr style="color: white;">
 <div th:if="${clienteLogado}">
         <!-- Mensagem de erro visível caso exista -->
         <div th:if="${erro}" class="alert alert-danger text-center" style="background-color: rgb(235, 107, 107); margin-top: 10px;">
             <p th:text="${erro}"></p>
-        </div>
-        <!-- Mensagem de erro dinâmica -->
-        <div class="error-message d-none alert alert-danger text-center" style="background-color: rgb(235, 107, 107); margin-top: 10px;">
-            <p id="error-text"></p>
         </div>
     <form id="alterarForm" th:action="@{/alterar-dados}" method="POSt" class="max-w-lg mx-auto bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md ">
         <h1 class="text-xl font-bold text-gray-900 dark:text-white mb-4 text-center">Altere seus dados no formulário abaixo!</h1>
@@ -164,50 +160,6 @@
         });
     </script>
 
-<script>
-    document.getElementById('alterarForm').addEventListener('submit', function(event) {
-    // Coleta dos valores para verificação em front-end
-    const email = document.getElementById('email').value;
-    const nomeUsuario = document.getElementById('nome').value;
-    const phone = document.getElementById('telefone').value;
-
-    // Regex email
-    const regexEmail = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-    // Regex nome (Nome e Sobrenome obrigatórios)
-    const regexNome = /^[A-Z][a-z]{2,}\s[A-Z][a-z]{2,}$/;
-    // Regex telefone
-    const phoneRegex = /^\(\d{2}\) \d{5}-\d{4}$/;
-
-    // Limpar qualquer mensagem de erro anterior
-    const errorMessageDiv = document.getElementsByClassName('error-message')[0]; // Corrigido
-    if (errorMessageDiv) {
-        errorMessageDiv.style.display = 'none';
-        document.getElementById('error-text').innerText = '';
-    }
-
-    if (!regexEmail.test(email)) {
-        document.getElementById('error-text').innerText = 'O email está no formato incorreto. Exemplo: exemplo@gmail.com';
-        errorMessageDiv.style.display = 'block';
-        event.preventDefault();
-        return;
-    }
-
-    if (!regexNome.test(nomeUsuario)) {
-        document.getElementById('error-text').innerText = 'O nome está no formato incorreto. Exemplo: Nome Sobrenome';
-        errorMessageDiv.style.display = 'block';
-        event.preventDefault();
-        return;
-    }
-
-    // Verificação do telefone
-    if (!phoneRegex.test(phone)) {
-        document.getElementById('error-text').innerText = 'O número de telefone está no formato incorreto. Exemplo: (XX) XXXXX-XXXX';
-        errorMessageDiv.style.display = 'block';
-        event.preventDefault();
-        return;
-    }
-});
-    </script>
 
 </body>
 </html>
