--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="/styles/home.css">
     <title>Aeroporto Internacional do Guamá</title>
 
@@ -14,9 +15,9 @@
     <header>
         <nav class="bg-white border-gray-200 dark:bg-gray-900">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="home.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <a th:href="@{/}" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="/img/aviao-logo.png" alt="Logo site" width="40" height="40" />
-                <span style="color: darkblue" class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white" >Aeroporto Internacional do Guamá</span>
+                <span style="color: #2B7FFF" class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white" >Aeroporto Internacional do Guamá</span>
             </a>
             <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
@@ -48,6 +49,10 @@
             </div>
         </nav>
     </header>
+
+    <div th:if="${sucesso}" class="bg-green-500 text-white text-center p-2 rounded-md mb-4 w-full max-w-md" id="successAlert" style="margin: 0 auto;">
+        <p th:text="${sucesso}"></p>
+    </div>
 
     <div class="container-voos">
         <h1>ENCONTRE <span>SEU VOO</span></h1>
@@ -278,7 +283,7 @@
               <div class="mb-6 md:mb-0 w-full">
                   <a href="#" class="flex items-center">
                       <img src="/img/aviao-logo.png" class="h-16 w-auto me-3" alt="Aeroporto Logo"/>
-                      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white" style="color: darkblue">Aeroporto Internacional do Guamá</span>
+                      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white" style="color: #2B7FFF">Aeroporto Internacional do Guamá</span>
                   </a>
               </div>
               <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
@@ -393,7 +398,13 @@
     </script>
     
     
-    
+    <script>
+        $(document).ready(function(){
+            setTimeout(function() {
+                $("#successAlert").fadeOut("slow");
+            }, 5000);
+        });
+    </script>
 
 
 </body>
